--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -320,7 +320,16 @@ header.hidden
 
 .gooberKai
 {
-  grid-column: 2/4;
+  grid-column: 3/4;
+  text-align: center;
+  grid-row: 4/5;
+  height: 10rem;
+  width: auto;
+}
+
+.gooberKyara
+{
+  grid-column: 2/3;
   text-align: center;
   grid-row: 4/5;
   height: 10rem;
@@ -354,7 +363,6 @@ footer
   display: block;
 }
 
-
 .footerContainer 
 {
   position: relative;
@@ -387,12 +395,14 @@ footer
   .secondTitle 
   {
     font-size: 3rem;
+    grid-row: 2/3;
+    grid-column: 1/3;
   }
 
   .middleBlock 
   {
-    display: flex;
-    flex-direction: column;  
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 2rem;             
     align-items: center;
   }
@@ -452,8 +462,8 @@ footer
 
   .aboutUsText
   {
-    grid-column: 1/5;
-    grid-row: 2/3;
+    grid-row: 4/5;
+    grid-column: 1/3;
     color: white;
     text-align: center;
     font-size: 1.5rem;
@@ -465,15 +475,32 @@ footer
   .aboutUsLinks, .aboutUsLinks a
   {
     font-size: 1.25rem;
+    grid-row: 3/4;
+    grid-column: 1/3;
+  }
+
+  .backButton
+  {
+    grid-column: 1/3;
+    grid-row: 1/2;
   }
 
   .gooberKai
   {
-    grid-column: 2/4;
     text-align: center;
-    grid-row: 3/4;
+    grid-row: 5/6;
     height: 6rem;
     width: auto;
+    grid-column: 2/3;
+  }
+
+  .gooberKyara
+  {
+    text-align: center;
+    grid-row: 5/6;
+    height: 6rem;
+    width: auto;
+    grid-column: 1/2;
   }
   
   .dcLogo 
