--- a/css/storyInfo.css
+++ b/css/storyInfo.css
@@ -302,7 +302,7 @@ header.hidden
   position: absolute;
 
   width: 0;
-  height: 3px;
+  height: 0.1rem;
   background-color: white;
 
   transition: width 0.3s ease, left 0.3s ease;
