--- a/nationPages/nation.css
+++ b/nationPages/nation.css
@@ -336,17 +336,69 @@ header.hidden
 
 .mention
 {
+  position: relative;
   color: white;
   text-align: center;
   font-size: 3rem;
   font-weight: normal;
   border-radius: 10px; 
+  margin-bottom: 5rem;
+}
+
+.mentionInfo p
+{
+  font-size: 1.75rem;
 }
 
 .mention:hover 
 {
   background: rgba(255,255,255,0.1);
   cursor: pointer;
+}
+
+.mention:hover .mentionInfo:not(.active),
+.mentionInfo.active 
+{
+  display: block;
+  transition: opacity 0.2s ease, transform 0.2s ease;
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.mentionInfo 
+{
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translateX(0) translateY(-50%);
+
+  width: 25rem;
+  max-width: calc(100vw - 2rem);
+  padding: 0.5rem;
+  background-color: black;
+  color: white;
+  border: 2px solid white;
+
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+  z-index: 10;
+  display: none;
+}
+
+.mentionInfo h4
+{
+  font-weight: normal;
+  font-size: 2.5rem;
+  margin: 1.5rem 0.5rem;
+}
+
+.mentionInfo.flipped 
+{
+  left: auto;
+  right: 100%;
+  transform: translateX(0) translateY(-50%);
 }
 
 .secondTitle
