--- a/nationPages/nation.css
+++ b/nationPages/nation.css
@@ -847,6 +847,25 @@ footer
     font-size: 1.5rem;
   }
 
+  .mentionInfo 
+  {
+    width: 10rem;
+    padding: 0.5rem;
+    border: 1px solid white;
+  }
+
+  .mentionInfo h4
+  {
+    font-weight: normal;
+    font-size: 1.5rem;
+    margin: 0.5rem 0.5rem;
+  }
+
+  .mentionInfo p
+  {
+    font-size: 0.75rem;
+  }
+
   header 
   {
     height: auto;
