--- a/css/allCharacters.css
+++ b/css/allCharacters.css
@@ -329,7 +329,6 @@ header.hidden
   transform: translateX(-50%);
   background: black;
   border: 2px solid white;
-  border-radius: 0.5rem;
   padding: 0.5rem 1rem;
   list-style: none;
   margin: 0;
@@ -356,6 +355,7 @@ header.hidden
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 0.5rem;
 }
 
 .charGrid 
@@ -380,51 +380,49 @@ header.hidden
   align-items: center;
   justify-content: center; 
   position: relative;
-  transition-property: background-color;
-  transition-duration: 0.400s;
-}
-
-.character:hover 
-{
-  background-color: rgba(255,255,255,0.1);
-  cursor: pointer;
 }
 
 .character:hover .characterInfo:not(.active),
 .characterInfo.active 
 {
-  display: block;
-  transition: opacity 0.2s ease, transform 0.2s ease;
   opacity: 1;
-  pointer-events: auto;
   visibility: visible;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scaleY(1);
 }
 
 .characterInfo 
 {
   position: absolute;
   top: 50%;
-  left: 100%;
-  transform: translateX(0) translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%) scaleY(0);
 
-  width: 20rem;
+  transform-origin: center;
+
+  width: 15rem;
   max-width: calc(100vw - 2rem);
   padding: 0.5rem;
+
   background-color: black;
   color: white;
   border: 2px solid white;
+  font-size: 1.05rem;
 
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
   z-index: 10;
-  display: none;
+
+  transition:
+  transform 0.4s cubic-bezier(.25,.8,.25,1),
+  opacity 0.2s ease;
 }
 
 .characterInfo h4
 {
   font-weight: normal;
-  font-size: 2rem;
+  font-size: 1.75rem;
   margin: 1.5rem 0.5rem;
 }
 
@@ -438,9 +436,9 @@ header.hidden
 
 .characterInfo.flipped 
 {
-  left: auto;
-  right: 100%;
-  transform: translateX(0) translateY(-50%);
+  top: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .mainTitle 
