--- a/nationPages/nation.css
+++ b/nationPages/nation.css
@@ -341,7 +341,6 @@ header.hidden
   text-align: center;
   font-size: 3rem;
   font-weight: normal;
-  border-radius: 10px; 
   margin-bottom: 5rem;
 }
 
@@ -350,30 +349,25 @@ header.hidden
   font-size: 1.75rem;
 }
 
-.mention:hover 
-{
-  background: rgba(255,255,255,0.1);
-  cursor: pointer;
-}
-
 .mention:hover .mentionInfo:not(.active),
 .mentionInfo.active 
 {
-  display: block;
-  transition: opacity 0.2s ease, transform 0.2s ease;
   opacity: 1;
-  pointer-events: auto;
   visibility: visible;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scaleY(1);
 }
 
 .mentionInfo 
 {
   position: absolute;
   top: 50%;
-  left: 100%;
-  transform: translateX(0) translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%) scaleY(0);
 
-  width: 25rem;
+  transform-origin: center;
+
+  width: 22rem;
   max-width: calc(100vw - 2rem);
   padding: 0.5rem;
   background-color: black;
@@ -384,7 +378,10 @@ header.hidden
   pointer-events: none;
   visibility: hidden;
   z-index: 10;
-  display: none;
+
+  transition:
+  transform 0.4s cubic-bezier(.25,.8,.25,1),
+  opacity 0.2s ease;
 }
 
 .mentionInfo h4
@@ -396,9 +393,9 @@ header.hidden
 
 .mentionInfo.flipped 
 {
-  left: auto;
-  right: 100%;
-  transform: translateX(0) translateY(-50%);
+  top: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .secondTitle
