--- a/nationPages/cast.css
+++ b/nationPages/cast.css
@@ -682,8 +682,9 @@ footer
   }
 
   .infoSlider {
-    grid-template-columns: 25rem;
-    gap: 0.5rem;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    width: 100%;
   }
 
   .sliderBtn {
@@ -702,12 +703,12 @@ footer
   }
 
   .slides {
-    min-height: 9rem;
+    min-height: 11rem;
   }
 
   .creditText
   {
-    margin-top: 1.25rem;
+    margin-top: 1.5rem;
     font-size: 1.25rem;
   }
 
@@ -716,23 +717,24 @@ footer
     grid-template-columns: 1fr 1fr;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    font-size: 0.8rem;
+    font-size: 0.85rem;
   }
 
   .slide.extraInfo p 
   {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.75rem;
   }
 
   .scrollWrapper 
   {
     padding-right: 1rem;
+    max-height: 140px;
   }
 
   .scrollable 
   {
     padding-left: 1rem;
-    max-height: 110px;
+    max-height: 140px;
   }
 
   .upperHr,
