--- a/nationPages/cast.css
+++ b/nationPages/cast.css
@@ -488,6 +488,14 @@ header.hidden
   padding-right: 5rem;
   margin-top: 0rem;
   margin-bottom: 0;
+  /* Line-height: 2.5; */
+}
+
+.redactedText
+{
+  background-color: rgb(191, 191, 191);
+  color: transparent;
+  user-select: none;
 }
 
 .referLink
