--- a/nationPages/cast.css
+++ b/nationPages/cast.css
@@ -266,8 +266,9 @@ header.hidden
 {
   grid-column: 1/2;
   grid-row: 1/5;
-  height: 100%;
+  height: 75%;
   width: auto;
+  margin: 5rem 0;
 }
 
 .secondTitle
